tests/machine/x/c/string_contains.error
line: 0
error: output mismatch
-- got --
621391886
621391891
-- want --
true
false
   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:54Z
