tests/machine/x/c/string_contains.c
// Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:54Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

static int contains_string(char *s, char *sub) {
  return strstr(s, sub) != NULL;
}
static char *s = "catch";

int main() {
  printf("%d\n", (contains_string(s, "cat")) ? "true" : "false");
  printf("%d\n", (contains_string(s, "dog")) ? "true" : "false");
  return 0;
}
